# paperkey

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.WIN32  README.md  configure.ac  extract.c  extract.h  output.c  output.h  packets.c  packets.h  paperkey.1  paperkey.c  paperkey.spec.in  parse.c  parse.h  restore.c  restore.h  sha1.h
checks/: Makefile.am  bad-crc-base16.sh  bad-crc-raw.sh  bad-primary.sh  bad-subkey.sh  corrupt-base16.txt  papertest-100.pub  papertest-100.sec  papertest-dsa100.pub  papertest-dsa100.sec  papertest-ecc.pub  papertest-ecc.sec  papertest-eddsa.pub  papertest-eddsa.sec  papertest-rsa.pub  papertest-rsa.sec  papertest.pub  papertest.sec  roundtrip-raw.sh  roundtrip.sh  verify.pgp
gl/m4/: gnulib-cache.m4
