TESTS=roundtrip.sh roundtrip-raw.sh bad-crc-base16.sh bad-crc-raw.sh
EXTRA_DIST=$(TESTS) papertest-rsa.pub papertest-rsa.sec papertest-dsaelg.pub papertest-dsaelg.sec papertest-ecc.pub papertest-ecc.sec papertest-eddsa.pub papertest-eddsa.sec corrupt-base16.txt corrupt-raw.bin 
CLEANFILES=papertest-*.txt regen.pgp papertest-*.bin
