TESTS=roundtrip.sh roundtrip-raw.sh bad-crc-base16.sh bad-crc-raw.sh bad-primary.sh bad-subkey.sh
EXTRA_DIST=$(TESTS) papertest-rsa.pub papertest-rsa.sec papertest-dsaelg.pub papertest-dsaelg.sec papertest-ecc.pub papertest-ecc.sec papertest-eddsa.pub papertest-eddsa.sec papertest-100.pub papertest-100.sec papertest-dsa100.pub papertest-dsa100.sec corrupt-base16.txt corrupt-raw.bin
CLEANFILES=papertest-*.bin papertest-*.txt regen-*.pgp
